2022-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49730: Completion/Unix/Command/_csplit,
	Completion/Unix/Command/_pr, Completion/Unix/Command/_ptx,
	Completion/Unix/Command/_truncate: New completers

2022-02-02  Matthew Martin  <phy1729@gmail.com>

	* 49731: Completion/BSD/Command/_sysclean,
	Completion/BSD/Command/_sysmerge,
	Completion/BSD/Command/_syspatch,
	Completion/BSD/Command/_sysupgrade: Add completers

2022-01-30  Mikael Magnusson  <mikachu@gmail.com>

	* 49694 + doc: Doc/Zsh/builtins.yo, Doc/Zsh/params.yo, Src/exec.c:
	Allow using empty STTY= to freeze tty for a single command

2022-01-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Functions/VCS_Info/test-repo-git-rebase-apply,
	Functions/VCS_Info/test-repo-git-rebase-merge: vcs_info git:
	Teach the rebase-apply test case generator to also generate
	rebase-merge test cases

	* unposted: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Add a missing guard against redefining a function.

	* unposted: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Deconfuse $EDITOR

	* unposted: Functions/VCS_Info/VCS_INFO_patch2subject,
	Functions/VCS_Info/VCS_INFO_set-branch-format,
	Functions/VCS_Info/VCS_INFO_set-patch-format: vcs_info: Add
	Vim modelines

	* 49723: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Use quilt-patch-dir and ${QUILT_PATCHES} even when get-unapplied
	hasn't been set

	* 49722: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Refactor for readability. No functional change.

	* 49715: Completion/Unix/Command/_subversion: add: Complete
	target arguments to this subcommand

	* 49714: Completion/Unix/Command/_subversion: resolve: Complete
	conflicted files created by merges, too

	* 49713: Completion/Unix/Command/_subversion: commit, diff,
	revert: Update completions for svn 1.7 and newer

	* 49712: Completion/Unix/Command/_subversion: svn rm: Complete
	all svn-controlled files, not only missing/deleted files
